add swager for register login
